@@ -13,7 +13,8 @@ Bug fixes:
 - the document portlet and the subfolders in the main content area were
   displayed along with the portal forms.
 - #1073: made getImgTag more robust.
-- fix: #628: need an action to remove a translation
+- Fixed #628: Need an action to remove a translation.
+- Fixed #1205: Faulty logged_in redirect with a HTTPS secured site.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Less restrictive permission check to allow
